--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -2,6 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "field:party.party,tradename:"
+msgctxt "field:party.party,trade_name:"
 msgid "Trade Name"
 msgstr "Nom comercial"
